# brawlstars.py

./: .gitignore  .openapi-generator-ignore  EVENTS.md  README.md  brawl_client.py  pyproject.toml  requirements.txt  setup.py
api/: README.md  setup.py
brawlstars/: README.md  __init__.py  api_client.py  configuration.py  errors.py  events.py  events_client.py  generated_README.md  rest.py  setup.py  utils.py
docs/: Accessory.md  AccessoryList.md  BannedBrawlerEntry.md  BannedBrawlerList.md  Battle.md  BattleList.md  BattleRegion.md  BattleRegionList.md  BattleResult.md  Brawler.md  BrawlerInfo.md  BrawlerInfoList.md  BrawlerList.md  BrawlerStat.md  BrawlerStatList.md  BrawlersApi.md  CancelMatchResponse.md  ClientError.md  Club.md  ClubMember.md  ClubMemberList.md  ClubRanking.md  ClubRankingList.md  ClubsApi.md  CompletedGame.md  CompletedGameList.md  CompletedGameTeam.md  CompletedGameTeamList.md  Event.md  EventModifier.md  EventModifierList.md  EventsApi.md  GearInfo.md  GearInfoList.md  GearStat.md  GearStatList.md  JsonLocalizedName.md  List.md  Match.md  MatchLocation.md  (+31 more)
generator/: download_swagger.py  readme.md  swagger.yaml
test/: test_accessory.py  test_accessory_list.py  test_banned_brawler_entry.py  test_banned_brawler_list.py  test_battle.py  test_battle_list.py  test_battle_region.py  test_battle_region_list.py  test_battle_result.py  test_brawler.py  test_brawler_info.py  test_brawler_info_list.py  test_brawler_list.py  test_brawler_stat.py  test_brawler_stat_list.py  test_brawlers_api.py  test_cancel_match_response.py  test_client_error.py  (+52 more)
(+278 files in other folders)
